# vakil

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
crates/vakil-cli/: Cargo.toml
crates/vakil-cli/src/: main.rs
crates/vakil-cli/tests/: cli.rs
crates/vakil-http/: Cargo.toml
crates/vakil-http/src/: lib.rs
crates/vakil-l4/: Cargo.toml
crates/vakil-l4/src/: lib.rs
crates/vakil-plugin-api/: Cargo.toml
crates/vakil-plugin-api/src/: lib.rs
crates/vakil-plugin-host/: Cargo.toml
crates/vakil-plugin-host/src/: lib.rs  version.rs
crates/vakil-plugin-sys/: Cargo.toml
crates/vakil-plugin-sys/src/: lib.rs
crates/vakil-runtime/: Cargo.toml
crates/vakil-runtime/src/: http.rs  l4.rs  lib.rs
crates/vakil-tests/: Cargo.toml
crates/vakil-tests-common/: Cargo.toml  README.md
crates/vakil-tests-common/src/: lib.rs
crates/vakil-tests/tests/: cli_http_startup.rs  cli_startup.rs  e2e_loaded_plugin.rs  live_proxy.rs
docs/: ABI.md
docs/arch/: container.puml  context.puml  http.puml  routing.puml  tcpudp.puml
plugins/example-http-mw/: Cargo.toml  README.md
plugins/example-http-mw/src/: lib.rs
plugins/example-http-url-filter/: Cargo.toml  README.md
plugins/example-http-url-filter/src/: lib.rs
plugins/example-l4-sticky/: Cargo.toml  README.md  sticky-l4.toml
plugins/example-l4-sticky/src/: lib.rs
plugins/example-l4-sticky/tests/: integration.rs
plugins/example-noop/: Cargo.toml
plugins/example-noop/src/: lib.rs
