[package]
name = "vakil-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
vakil-runtime = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
